src/objects/Batch_Job__c.object
<CustomObject>
    <description>This holds the records for batch process of MRR and Renew Orders</description>
    <fields>
        <fullName>Completed_Date_and_Time__c</fullName>
        <label>Completed Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exception_Log__c</fullName>
        <label>Exception Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date_and_Time__c</fullName>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed with errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MRR Calculation</fullName>
                </value>
                <value>
                    <fullName>Auto Renewals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SteelBrick Batch Jobs</label>
    <listViews>
        <fullName>All_Batch_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date_and_Time__c</columns>
        <columns>Completed_Date_and_Time__c</columns>
        <columns>Exception_Log__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Batch Jobs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_House_Keeping</fullName>
        <columns>NAME</columns>
        <columns>Start_Date_and_Time__c</columns>
        <columns>Completed_Date_and_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Exception_Log__c</columns>
        <filterScope>Everything</filterScope>
        <label>All House Keeping</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Eleanor</fullName>
        <columns>NAME</columns>
        <columns>Start_Date_and_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Eleanor</value>
        </filters>
        <label>Eleanor&apos;s Batch Jobs</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice IT Batch Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>